# ToyVo.github.io

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  asset-manifest.json  bun.lockb  flake.nix  index-38a1d3d041e81731.css  index-83816d0bf6b9e22f.css  index.html  index.scss  package-lock.json  package.json  portfolio-3fed86b1581dc061.js  portfolio-3fed86b1581dc061_bg.wasm  portfolio-85e45934853612b1.js  portfolio-85e45934853612b1_bg.wasm
.github/workflows/: build.yml
public/: CNAME  index.html
src/: App.tsx  JsonResume.ts  index.css  index.tsx  json_resume.rs  main.rs
src/components/: Layout.tsx  MobileNav.tsx  Sidebar.tsx  UserHeader.tsx  user_header.rs
src/pages/: Education.tsx  Me.tsx  Projects.tsx  Work.tsx  index.tsx
src/views/: education.rs  me.rs  projects.rs  work.rs
static/css/: main.a17b0d7a.chunk.css  main.a17b0d7a.chunk.css.map  main.e6b737e1.css  main.e6b737e1.css.map
static/js/: 2.3b71e19c.chunk.js  2.3b71e19c.chunk.js.map  2.ad9d3b6a.chunk.js  2.ad9d3b6a.chunk.js.map  3.7bfbe7ee.chunk.js  3.7bfbe7ee.chunk.js.map  main.8841b92d.chunk.js  main.8841b92d.chunk.js.map  main.94e69714.js  main.94e69714.js.map  main.b7a11257.chunk.js  main.b7a11257.chunk.js.map  main.f2488911.js  main.f2488911.js.map  runtime-main.e2552b06.js  runtime-main.e2552b06.js.map
