[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = "0.19"
yew-router = "0.16"
yewdux = "0.8"
