[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0"
js-sys = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0"
web-sys = "0"
yew = {version="0", features=["csr"]}
yew-router = "0"
yewdux = "0"
